crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_editor_save_refused_styles.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: style
---
0 0..43 Red Reset -
1 27..100 Cyan Reset -
2 1..6 Reset Reset BOLD|DIM
2 6..27 Reset Reset DIM
2 27..28 Cyan Reset -
2 28..32 Reset Reset DIM
2 99..100 Cyan Reset -
3 1..27 Reset Reset DIM
3 27..28 Cyan Reset -
3 28..32 Reset Reset DIM
3 99..100 Cyan Reset -
4 1..9 Reset Reset DIM
4 9..11 Green Reset DIM
4 11..12 Reset Reset DIM
4 12..14 Red Reset DIM
4 14..27 Reset Reset DIM
4 27..28 Cyan Reset -
4 28..32 Reset Reset DIM
4 98..99 Reset Reset DIM
4 99..100 Cyan Reset -
5 1..9 Reset Reset DIM
5 9..11 Green Reset DIM
5 11..12 Reset Reset DIM
5 12..14 Red Reset DIM
5 14..27 Reset Reset DIM
5 27..28 Cyan Reset -
5 28..32 Reset Reset DIM
5 99..100 Cyan Reset -
6 1..15 Reset Reset DIM|REVERSED
6 15..17 Green Reset DIM|REVERSED
6 17..18 Reset Reset DIM|REVERSED
6 18..21 Red Reset DIM|REVERSED
6 21..27 Reset Reset DIM|REVERSED
6 27..28 Cyan Reset -
6 28..32 Reset Reset DIM
6 98..99 Reset Reset DIM
6 99..100 Cyan Reset -
7 1..27 Reset Reset DIM
7 27..28 Cyan Reset -
7 28..32 Reset Reset DIM
7 99..100 Cyan Reset -
8 1..5 Reset Reset BOLD|DIM
8 5..27 Reset Reset DIM
8 27..28 Cyan Reset -
8 28..33 Reset Reset DIM
8 99..100 Cyan Reset -
9 1..27 Reset Reset DIM
9 27..28 Cyan Reset -
9 28..33 Reset Reset DIM
9 99..100 Cyan Reset -
10 1..9 Reset Reset DIM
10 9..11 Green Reset DIM
10 11..12 Reset Reset DIM
10 12..14 Red Reset DIM
10 14..27 Reset Reset DIM
10 27..28 Cyan Reset -
10 28..33 Reset Reset DIM
10 99..100 Cyan Reset -
11 1..9 Reset Reset DIM
11 9..11 Green Reset DIM
11 11..12 Reset Reset DIM
11 12..14 Red Reset DIM
11 14..27 Reset Reset DIM
11 27..28 Cyan Reset -
11 28..33 Reset Reset DIM
11 99..100 Cyan Reset -
12 1..27 Reset Reset DIM
12 27..28 Cyan Reset -
12 28..33 Reset Reset DIM
12 99..100 Cyan Reset -
13 1..27 Reset Reset DIM
13 27..28 Cyan Reset -
13 28..33 Reset Reset DIM
13 99..100 Cyan Reset -
14 1..6 Reset Reset BOLD|DIM
14 6..27 Reset Reset DIM
14 27..28 Cyan Reset -
14 28..33 Reset Reset DIM
14 99..100 Cyan Reset -
15 1..27 Reset Reset DIM
15 27..28 Cyan Reset -
15 28..33 Reset Reset DIM
15 99..100 Cyan Reset -
16 1..12 Reset Reset DIM
16 12..14 Green Reset DIM
16 14..15 Reset Reset DIM
16 15..17 Red Reset DIM
16 17..27 Reset Reset DIM
16 27..28 Cyan Reset -
16 28..33 Reset Reset DIM
16 98..99 Reset Reset DIM
16 99..100 Cyan Reset -
17 1..27 Reset Reset DIM
17 27..28 Cyan Reset -
17 28..33 Reset Reset DIM
17 98..99 Reset Reset DIM
17 99..100 Cyan Reset -
18 1..27 Reset Reset DIM
18 27..28 Cyan Reset -
18 28..33 Reset Reset DIM
18 99..100 Cyan Reset -
19 1..27 Reset Reset DIM
19 27..28 Cyan Reset -
19 28..32 Reset Indexed(236) DIM
19 32..33 Reset Indexed(236) BOLD
19 33..99 Reset Indexed(236) -
19 99..100 Cyan Reset -
20 1..27 Reset Reset DIM
20 27..28 Cyan Reset -
20 28..32 Reset Indexed(236) DIM
20 32..33 Reset Indexed(236) BOLD
20 33..99 Reset Indexed(236) -
20 99..100 Cyan Reset -
21 1..27 Reset Reset DIM
21 27..28 Cyan Reset -
21 28..32 Reset Indexed(236) DIM
21 32..33 Reset Indexed(236) BOLD
21 33..99 Reset Indexed(236) -
21 99..100 Cyan Reset -
22 1..27 Reset Reset DIM
22 27..28 Cyan Reset -
22 28..32 Reset Indexed(236) DIM
22 32..33 Reset Indexed(236) BOLD
22 33..99 Reset Indexed(236) -
22 99..100 Cyan Reset -
23 1..27 Reset Reset DIM
23 27..28 Cyan Reset -
23 28..32 Reset Indexed(238) DIM
23 32..33 Reset Indexed(238) BOLD
23 33..34 Reset Indexed(238) REVERSED
23 34..98 Reset Indexed(238) -
23 98..99 Reset Indexed(238) DIM
23 99..100 Cyan Reset -
24 1..27 Reset Reset DIM
24 27..28 Cyan Reset -
24 28..32 Reset Indexed(236) DIM
24 32..33 Reset Indexed(236) BOLD
24 33..99 Reset Indexed(236) -
24 99..100 Cyan Reset -
25 1..27 Reset Reset DIM
25 27..28 Cyan Reset -
25 28..32 Reset Indexed(236) DIM
25 32..33 Reset Indexed(236) BOLD
25 33..99 Reset Indexed(236) -
25 99..100 Cyan Reset -
26 1..27 Reset Reset DIM
26 27..28 Cyan Reset -
26 28..32 Reset Indexed(236) DIM
26 32..33 Reset Indexed(236) BOLD
26 33..99 Reset Indexed(236) -
26 99..100 Cyan Reset -
27 1..27 Reset Reset DIM
27 27..28 Cyan Reset -
27 28..33 Reset Reset DIM
27 99..100 Cyan Reset -
28 27..100 Cyan Reset -
29 76..81 Reset Reset DIM
