crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_empty_state_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  1 repo · 0 files · 0 hunks  standalone  [Accept All]                            watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│solo                      │nothing pending across 1 repo                                          │"
"│  main · 0 files          │  solo  main                                                           │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"↑↓ select  ⏎ open  t hide empty  Tab focus  r refresh  R reload  ? help  q quit                     "
