crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_group_view_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 6 files · 8 hunks  standalone  [Accept All]                           watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │upstream · 1 file                                                      │"
"│  main · 3 files          │  u1                                                                   │"
"│  M f1  +1 −1             │                                                                       │"
"│  M f2  +1 −0             │                                                                       │"
"│  M parse.rs  +10 −2      │                                                                       │"
"│──────────────────────────│                                                                       │"
"│beta                      │                                                                       │"
"│  main · 2 files          │                                                                       │"
"│  A u1  +1 −0  [upstream] │                                                                       │"
"│  A u2  +2 −0  [mixed]    │                                                                       │"
"│  [upstream] 1 file       │                                                                       │"
"│──────────────────────────│                                                                       │"
"│W/notes                   │                                                                       │"
"│  draft · 1 file          │                                                                       │"
"│  M n2.md  +2 −0          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"↑↓ scroll  ← back  A accept group  ^A accept all  t hide empty  Tab focus  r refresh  ? help  q quit"
