crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_help_overlay_80x24_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastca┌ keys ────────────────────────────────────────────────────────────┐hing W"
"┌─────│ ↑ / k          previous entry / scroll up                        │─────┐"
"│alpha│ ↓ / j          next entry / scroll down                          │file]│"
"│  mai│ PgUp / b       page up                                           │flag]│"
"│  M f│ PgDn / Space   page down                                         │     │"
"│  M f│ ⏎ / l / →      open the diff                                     │     │"
"│  M p│ Esc / h / ←    back to the file list (close help)                │     │"
"│─────│ Tab            toggle focus                                      │     │"
"│beta │ n / ]          next hunk                                         │     │"
"│  mai│ p / [          previous hunk                                     │     │"
"│  A u│ t              hide / show empty repos                           │     │"
"│  A u│ a              accept the hunk under the cursor                  │     │"
"│  [up│ A              accept the whole file or repo                     │     │"
"│─────│ Ctrl-A         accept everything listed                          │     │"
"│W/not│ u              restore the hunk                                  │     │"
"│  dra│ U              restore the whole file                            │     │"
"│  M n│ z              undo the last accept                              │     │"
"│     │ … 24 more keys (97 columns shows all)                            │     │"
"│     │ q / Ctrl-C     quit                                              │     │"
"│     │ ^J is a newline in the note (⇧⏎ needs a kitty-protocol terminal) │     │"
"│     │ drag selects text · v/y copies                                   │     │"
"│     │ lastcall tui --tour shows the welcome again                      │     │"
"└─────│ any key closes                                                   │─────┘"
"↑↓ sel└──────────────────────────────────────────────────────────────────┘      "
