crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_help_overlay_80x24_styles.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: style
---
0 0..6 Reset Reset BOLD
0 6..74 Cyan Reset -
1 0..7 Cyan Reset -
1 73..74 Cyan Reset -
2 0..1 Cyan Reset -
2 1..6 Reset Reset BOLD
2 6..7 Cyan Reset -
2 73..74 Cyan Reset -
2 74..79 Reset Reset DIM
3 0..1 Cyan Reset -
3 6..7 Cyan Reset -
3 73..74 Cyan Reset -
3 74..79 Reset Reset REVERSED
4 0..1 Cyan Reset -
4 1..6 Reset Reset REVERSED
4 6..7 Cyan Reset -
4 73..74 Cyan Reset -
5 0..1 Cyan Reset -
5 6..7 Cyan Reset -
5 73..74 Cyan Reset -
6 0..1 Cyan Reset -
6 6..7 Cyan Reset -
6 73..74 Cyan Reset -
7 0..1 Cyan Reset -
7 1..6 Reset Reset DIM
7 6..7 Cyan Reset -
7 73..74 Cyan Reset -
8 0..1 Cyan Reset -
8 1..5 Reset Reset BOLD
8 6..7 Cyan Reset -
8 73..74 Cyan Reset -
9 0..1 Cyan Reset -
9 6..7 Cyan Reset -
9 73..74 Cyan Reset -
10 0..1 Cyan Reset -
10 6..7 Cyan Reset -
10 73..74 Cyan Reset -
11 0..1 Cyan Reset -
11 6..7 Cyan Reset -
11 73..74 Cyan Reset -
12 0..1 Cyan Reset -
12 6..7 Cyan Reset -
12 73..74 Cyan Reset -
13 0..1 Cyan Reset -
13 1..6 Reset Reset DIM
13 6..7 Cyan Reset -
13 73..74 Cyan Reset -
14 0..1 Cyan Reset -
14 1..6 Reset Reset BOLD
14 6..7 Cyan Reset -
14 73..74 Cyan Reset -
15 0..1 Cyan Reset -
15 6..7 Cyan Reset -
15 73..74 Cyan Reset -
16 0..1 Cyan Reset -
16 6..7 Cyan Reset -
16 73..74 Cyan Reset -
17 0..1 Cyan Reset -
17 6..7 Cyan Reset -
17 8..45 Reset Reset DIM
17 73..74 Cyan Reset -
18 0..1 Cyan Reset -
18 6..7 Cyan Reset -
18 73..74 Cyan Reset -
19 0..1 Cyan Reset -
19 6..7 Cyan Reset -
19 73..74 Cyan Reset -
20 0..1 Cyan Reset -
20 6..7 Cyan Reset -
20 73..74 Cyan Reset -
21 0..1 Cyan Reset -
21 6..7 Cyan Reset -
21 73..74 Cyan Reset -
22 0..7 Cyan Reset -
22 8..22 Reset Reset DIM
22 73..74 Cyan Reset -
23 0..6 Reset Reset DIM
23 6..74 Cyan Reset -
