crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_help_overlay_exact_fit_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"l┌ keys ─────────────────────────────────────────────────────────────────────────────────────────┐ W"
"┌│ ↑ / k          previous entry / scroll up           m              flag it with a note        │─┐"
"││ ↓ / j          next entry / scroll down             M              clear the file's flags     │ │"
"││ PgUp / b       page up                              v              select lines               │ │"
"││ PgDn / Space   page down                            y              copy selection             │ │"
"││ ⏎ / l / →      open the diff                        i              edit in place              │ │"
"││ Esc / h / ←    back to the file list (close help)   I              $EDITOR at the hunk        │ │"
"││ Tab            toggle focus                         d              ack the agent flag         │ │"
"││ n / ]          next hunk                            g              jump to the agent in herdr │ │"
"││ p / [          previous hunk                        w              workspace scope on/off     │ │"
"││ t              hide / show empty repos              r              rescan now                 │ │"
"││ a              accept the hunk under the cursor     R              reload the config file     │ │"
"││ A              accept the whole file or repo        e              expand a collapsed file    │ │"
"││ Ctrl-A         accept everything listed             f              full paths                 │ │"
"││ u              restore the hunk                     o              show org/repo              │ │"
"││ U              restore the whole file               Opt-z (Ω) / Alt-z wrap long lines         │ │"
"││ z              undo the last accept                 s              snooze this repo           │ │"
"││ Home           first entry / top of diff            S              show / hide snoozed repos  │ │"
"││ End            last entry / end of diff             ?              this help                  │ │"
"││ Alt-↑ / {      previous repository                  q / Ctrl-C     quit                       │ │"
"││ Alt-↓ / }      next repository                      y / ⏎          confirm                    │ │"
"││ J / shift-down extend selection down                n / Esc        cancel                     │ │"
"││ K / shift-up   extend selection up                                                            │ │"
"││                                                                                               │ │"
"││ ^J is a newline in the note (⇧⏎ needs a kitty-protocol terminal)                              │ │"
"││ drag selects text · v/y copies                                                                │ │"
"││ lastcall tui --tour shows the welcome again                                                   │ │"
"└│ any key closes                                                                                │─┘"
"↑└───────────────────────────────────────────────────────────────────────────────────────────────┘  "
