crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_help_overlay_exact_fit_styles.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: style
---
0 0..1 Reset Reset BOLD
0 1..98 Cyan Reset -
1 0..2 Cyan Reset -
1 97..98 Cyan Reset -
2 0..2 Cyan Reset -
2 97..98 Cyan Reset -
3 0..2 Cyan Reset -
3 97..98 Cyan Reset -
4 0..2 Cyan Reset -
4 97..98 Cyan Reset -
5 0..2 Cyan Reset -
5 97..98 Cyan Reset -
6 0..2 Cyan Reset -
6 97..98 Cyan Reset -
7 0..2 Cyan Reset -
7 97..98 Cyan Reset -
8 0..2 Cyan Reset -
8 97..98 Cyan Reset -
9 0..2 Cyan Reset -
9 97..98 Cyan Reset -
10 0..2 Cyan Reset -
10 97..98 Cyan Reset -
11 0..2 Cyan Reset -
11 97..98 Cyan Reset -
12 0..2 Cyan Reset -
12 97..98 Cyan Reset -
13 0..2 Cyan Reset -
13 97..98 Cyan Reset -
14 0..2 Cyan Reset -
14 97..98 Cyan Reset -
15 0..2 Cyan Reset -
15 97..98 Cyan Reset -
16 0..2 Cyan Reset -
16 97..98 Cyan Reset -
17 0..2 Cyan Reset -
17 97..98 Cyan Reset -
18 0..2 Cyan Reset -
18 97..98 Cyan Reset -
19 0..2 Cyan Reset -
19 97..98 Cyan Reset -
20 0..2 Cyan Reset -
20 97..98 Cyan Reset -
21 0..2 Cyan Reset -
21 97..98 Cyan Reset -
22 0..2 Cyan Reset -
22 97..98 Cyan Reset -
23 0..2 Cyan Reset -
23 97..98 Cyan Reset -
24 0..2 Cyan Reset -
24 97..98 Cyan Reset -
25 0..2 Cyan Reset -
25 97..98 Cyan Reset -
26 0..2 Cyan Reset -
26 3..17 Reset Reset DIM
26 97..98 Cyan Reset -
27 0..1 Reset Reset DIM
27 1..98 Cyan Reset -
